--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl module Email::Filter::Rules
 
+1.0 5/6/2005
+	- Removed Mail::Audit references in favor or Email::Filter only
+	- Added some better testing
+	- Cleaned up the code/pod a bit
+
 0.4 4/5/2004 (Cinco de Mayo - It's Margarita time!!)
 	- pod2text lib/Email/Filter/Rules.pm > README
 
