--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl module Email::Filter::Rules
 
+1.11    5/9/2006
+        - No need to update, just pod, and test coverage updates
+        - Added lots and lots of tests, as close to 100% as I'm going to get.
+        - Pod coverage now at 100%
+        - Regenerated README to replace out of date README
+
 1.1     5/7/2006
         - Added Email::Filter as a prereq so tests will pass.
         - Regenerated README to replace out of date README
