--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Email::Filter::Rules
 
+1.12    11/1/2006
+        - No need to update, cpants META.yaml fix
+
 1.11    5/9/2006
         - No need to update, just pod, and test coverage updates
         - Added lots and lots of tests, as close to 100% as I'm going to get.
