--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 Revision history for Perl module Email::Filter::Rules
 
+1.121   11/5/2006
+        - No need to update, cpants META.yml fix, needed to update to
+          ExtUtils::MakeMaker 6.31 for META.yml update
+
 1.12    11/1/2006
-        - No need to update, cpants META.yaml fix
+        - No need to update, cpants META.yml fix
 
 1.11    5/9/2006
         - No need to update, just pod, and test coverage updates
